--- a/source/TFeatureRunner.cls
+++ b/source/TFeatureRunner.cls
@@ -1,5 +1,19 @@
+VERSION 1.0 CLASS
+BEGIN
+  MultiUse = -1  'True
+END
 Attribute VB_Name = "TFeatureRunner"
+Attribute VB_GlobalNameSpace = False
+Attribute VB_Creatable = False
+Attribute VB_PredeclaredId = False
+Attribute VB_Exposed = False
 Option Explicit
+
+Private m_session As TSession
+
+Public Sub setup(Session As TSession)
+    Set m_session = Session
+End Sub
 
 Public Function run_feature(feature As TFeature, Optional filter_tag, Optional silent) As Collection
     
@@ -12,11 +26,10 @@ Public Function run_feature(feature As TFeature, Optional filter_tag, Optional s
     If IsMissing(filter_tag) Then filter_tag = vbNullString
     If IsMissing(silent) Then silent = False
     Set example_runner = New TExampleRunner
+    example_runner.setup m_session
     Set feature_statistics = New Collection
-    If Not silent Then
-        TRun.Session.Reporter.report REPORT_MSG_TYPE_FEATURE_NAME, feature.Name
-        TRun.Session.Reporter.report REPORT_MSG_TYPE_DESC, feature.Description
-    End If
+    m_session.Reporter.report REPORT_MSG_TYPE_FEATURE_NAME, feature.Name, silent:=silent
+    m_session.Reporter.report REPORT_MSG_TYPE_DESC, feature.Description, silent:=silent
     For Each feature_clause In feature.sections
         If TypeName(feature_clause) = "TExample" Then
             Set example = feature_clause
@@ -26,7 +39,7 @@ Public Function run_feature(feature As TFeature, Optional filter_tag, Optional s
                 feature_statistics.Add example_statistics
             End If
         ElseIf TypeName(feature_clause) = "TRule" Then
-            TRun.Session.Reporter.report REPORT_MSG_TYPE_RULE, feature_clause.WholeRule
+            m_session.Reporter.report REPORT_MSG_TYPE_RULE, feature_clause.WholeRule, silent:=silent
         End If
     Next
     Set run_feature = feature_statistics
