--- a/step_definitions/Steps_report_verbose.cls
+++ b/step_definitions/Steps_report_verbose.cls
@@ -49,7 +49,7 @@ End Sub
 
 Public Sub Then_the_report_output_contains_STR_5A8ED3F2F3C6(step_expressions As Collection)
     'Then the report output contains {string}
-    TSpec.expect(TStepVars.Session.Reporter.ConsoleOutput).includes step_expressions(1)
+    TSpec.expect(TStepVars.Session.Reporter.ConsoleOutput).includes_text step_expressions(1)
 End Sub
 
 Public Sub Then_the_report_output_doesnt_contain_STR_77804E212494(step_expressions As Collection)
